roughly finished homepage

--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
       <div class="left">
         <div class="text-left">
           <h1>The Roastery</h1>
+          <img src="resources/images/line_1.png" alt="orange line">
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
         </div>
       </div>
@@ -59,9 +60,37 @@
 
     <section class="offerings-bottom">
       <div class="left-bottom">
-        
+      </div>
+      <div class="right-bottom">
+        <div class="text-right-bottom">
+          <h1>The Cafe</h1>
+          <img src="resources/images/line_2.png" alt="blue line">
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+        </div>
       </div>
     </section>
+
+    <footer>
+      <div class="footer-container">
+          <div class="footer-left">
+            <ul>
+              <li>Home</li>
+              <li>Shop</li>
+              <li>About</li>
+            </ul>
+          </div>
+          <div class="footer-logo">
+            <img src="resources/images/footer_logo.png" alt="B&B Logo">
+          </div>
+          <div class="footer-right">
+            <ul>
+              <li>Visit</li>
+              <li>Subscription</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+        </div>
+    </footer>
 
 
   </body>
