--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="resources/style.css" type="text/css">
+    <link rel="stylesheet" href="resources/home.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
@@ -11,7 +11,31 @@
 
 <!-- Main Banner  -->
 
-    <section class="main-banner">
+  <section>
+    <div class="main-banner">
+      <div class="container">
+        <div class="logo">
+          <img src="resources/images/logo.png" alt="">
+        </div>
+        <nav>
+          <div class="logo-text">
+            <h1>Batdorf & Bronson</h1>
+            <h3>Coffee Roasters</h3>
+          </div>
+          <ul>
+            <li>Home</li>
+            <li>Shop</li>
+            <li>About</li>
+            <li>Visit</li>
+            <li>Subscriptions</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </section>
+
+    <!-- <section class="main-banner">
       <div class="container">
         <div class="logo">
           <img src="resources/images/logo.png" alt="lotus flower logo">
@@ -35,11 +59,11 @@
         <h3>Learn more</h3>
         <img src="resources/images/arrow.png" alt="down arrow">
       </div>
-    </section>
+    </section> -->
 
 <!-- Top Offerings  -->
 
-    <section class="offerings-top">
+    <!-- <section class="offerings-top">
       <div class="left">
         <div class="text-left">
           <h1>The Roastery</h1>
@@ -54,11 +78,11 @@
           <img src="resources/images/shop_button.png" alt="shop button">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Bottom Offerings  -->
 
-    <section class="offerings-bottom">
+    <!-- <section class="offerings-bottom">
       <div class="left-bottom">
       </div>
       <div class="right-bottom">
@@ -89,8 +113,8 @@
               <li>Contact</li>
             </ul>
           </div>
-        </div>
-    </footer>
+        </div> -->
+    <!-- </footer> -->
 
 
   </body>
