finishing touches to html/css

--- a/home.html
+++ b/home.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" href="resources/home.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   </head>
   <body>
 
@@ -14,108 +13,86 @@
   <section>
     <div class="main-banner">
       <div class="container">
-        <div class="logo">
-          <img src="resources/images/logo.png" alt="">
-        </div>
         <nav>
-          <div class="logo-text">
-            <h1>Batdorf & Bronson</h1>
-            <h3>Coffee Roasters</h3>
+          <img src="resources/images/logo.png" alt="lotus flower logo">
+          <div class= "company-name">
+            <h1>BATDORF & BRONSON</h1>
+            <span>Coffee Roasters</span>
           </div>
           <ul>
-            <li>Home</li>
-            <li>Shop</li>
-            <li>About</li>
-            <li>Visit</li>
-            <li>Subscriptions</li>
-            <li>Contact</li>
+            <li>HOME</li>
+            <li>SHOP</li>
+            <li>ABOUT</li>
+            <li>VISIT</li>
+            <li>SUBSCRIPTIONS</li>
+            <li>CONTACT</li>
           </ul>
         </nav>
+        <div class="headline">
+          <h3>Ethically sourced and artisinally crafted.</h3>
+          <p>LEARN MORE</p>
+          <img src="resources/images/arrow.png" alt="scroll down arrow">
+        </div>
       </div>
     </div>
   </section>
 
-    <!-- <section class="main-banner">
-      <div class="container">
-        <div class="logo">
-          <img src="resources/images/logo.png" alt="lotus flower logo">
-        </div>
-        <div class="company-name">
-          <h1>Batdorf & Bronson</h1>
-          <h3>Coffee Roasters</h3>
-        </div>
-        <div class=nav-container>
-          <nav>
-            <li>Home</li>
-            <li>Shop</li>
-            <li>About</li>
-            <li>Visit</li>
-            <li>Contact</li>
-          </nav>
-        </div>
-      </div>
-      <div class="headline">
-        <h1>Artisinally sourced and ethically crafted</h1>
-        <h3>Learn more</h3>
-        <img src="resources/images/arrow.png" alt="down arrow">
-      </div>
-    </section> -->
+<!-- Top Section -->
 
-<!-- Top Offerings  -->
-
-    <!-- <section class="offerings-top">
-      <div class="left">
-        <div class="text-left">
-          <h1>The Roastery</h1>
-          <img src="resources/images/line_1.png" alt="orange line">
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-        </div>
+  <section class="top-section">
+    <div class="top-left">
+      <div class="top-left-content">
+        <h1>THE COFFEE</h1>
+        <img src="resources/images/line_1.png" alt="orange line">
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
       </div>
-      <div class="right">
-        <div class="text-right">
-          <img src="resources/images/coffee_bag.png" alt="coffee bag">
-          <h3>See What's in season at Batdorf & Bronson</h3>
-          <img src="resources/images/shop_button.png" alt="shop button">
-        </div>
+    </div>
+    <div class="top-right">
+      <div class="top-right-content">
+        <img src="resources/images/coffee_bag.png" alt="coffee bag">
+        <p>See what's brewing at B&B</p>
+        <img src="resources/images/shop_button.png" alt="shop buttonn">
       </div>
-    </section> -->
+    </div>
+  </section>
 
-    <!-- Bottom Offerings  -->
+  <!-- Bottom Section  -->
 
-    <!-- <section class="offerings-bottom">
-      <div class="left-bottom">
+    <section class="bottom-section">
+      <div class="bottom-left">
       </div>
-      <div class="right-bottom">
-        <div class="text-right-bottom">
-          <h1>The Cafe</h1>
+      <div class="bottom-right">
+        <div class="bottom-right-content">
+          <h1>THE CAFE</h1>
           <img src="resources/images/line_2.png" alt="blue line">
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
         </div>
       </div>
     </section>
 
-    <footer>
-      <div class="footer-container">
-          <div class="footer-left">
-            <ul>
-              <li>Home</li>
-              <li>Shop</li>
-              <li>About</li>
-            </ul>
-          </div>
-          <div class="footer-logo">
-            <img src="resources/images/footer_logo.png" alt="B&B Logo">
-          </div>
-          <div class="footer-right">
-            <ul>
-              <li>Visit</li>
-              <li>Subscription</li>
-              <li>Contact</li>
-            </ul>
-          </div>
-        </div> -->
-    <!-- </footer> -->
+<!-- Footer  -->
 
+    <footer>
+      <div class="footer-content">
+        <div class="left-footer">
+          <ul>
+            <li>HOME</li>
+            <li>SHOP</li>
+            <li>ABOUT</li>
+          </ul>
+        </div>
+        <div class="logo">
+          <img src="resources/images/footer_logo.png" alt="">
+        </div>
+        <div class="right-footer">
+          <ul>
+            <li>VISIT</li>
+            <li>SUBSCRIPTIONS</li>
+            <li>CONTACT</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
