--- a/home.html
+++ b/home.html
@@ -19,6 +19,9 @@
             <h1>BATDORF & BRONSON</h1>
             <span>Coffee Roasters</span>
           </div>
+          <div class="hamburger">
+            <img src="resources/images/hamburger.jpg" alt="hamburger mobile display menu">
+          </div>
           <ul>
             <li>HOME</li>
             <li>SHOP</li>
