responsive header fixed

--- a/home.html
+++ b/home.html
@@ -10,7 +10,29 @@
 
 <!-- Main Banner  -->
 
-  <section>
+  <section class="main-banner">
+    <div class="container">
+      <nav>
+        <div class="company-name">
+          <img src="resources/images/logo.png" alt="lotus flower logo">
+          <h1>BATDORF AND BRONSON</h1>
+        </div>
+        <div class="hamburger">
+          <img src="resources/images/hamburger.jpg" alt="hamburger menu">
+        </div>
+        <ul>
+          <li>HOME</li>
+          <li>SHOP</li>
+          <li>ABOUT</li>
+          <li>VISIT</li>
+          <li>SUBSCRIPTIONS</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
+    </div>
+  </section>
+
+  <!-- <section>
     <div class="main-banner">
       <div class="container">
         <nav>
@@ -38,7 +60,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 <!-- Top Section -->
 
