mobile responsive bottom section

--- a/home.html
+++ b/home.html
@@ -94,6 +94,9 @@
         </div>
       </div>
     </section>
+    <div class="learn-more">
+      <img src="resources/images/learn_more.jpg" alt="learn more button">
+    </div>
 
 <!-- Footer  -->
 
