--- a/home.html
+++ b/home.html
@@ -112,6 +112,16 @@
         <div class="logo">
           <img src="resources/images/footer_logo.png" alt="">
         </div>
+        <!-- <div class="new-left-footer">
+          <ul>
+            <li>HOME</li>
+            <li>SHOP</li>
+            <li>ABOUT</li>
+            <li>VISIT</li>
+            <li>SUBSCRIPTIONS</li>
+            <li>CONTACT</li>
+          </ul>
+        </div> -->
         <div class="right-footer">
           <ul>
             <li>VISIT</li>
@@ -120,6 +130,16 @@
           </ul>
         </div>
       </div>
+      <!-- <div class="new-left-footer">
+        <ul>
+          <li>HOME</li>
+          <li>SHOP</li>
+          <li>ABOUT</li>
+          <li>VISIT</li>
+          <li>SUBSCRIPTIONS</li>
+          <li>CONTACT</li>
+        </ul>
+      </div> -->
     </footer>
 
   </body>
