--- a/index.html
+++ b/index.html
@@ -15,53 +15,23 @@
     <div class="container">
       <nav>
         <div class="company-name">
-          <img src="resources/images/logo.png" alt="lotus flower logo">
+          <img src="resources/images/home/logo.png" alt="lotus flower logo">
           <h1>BATDORF AND BRONSON</h1>
         </div>
         <div class="hamburger">
-          <img src="resources/images/hamburger.jpg" alt="hamburger menu">
+          <img src="resources/images/home/hamburger.jpg" alt="hamburger menu">
         </div>
         <ul>
           <li>HOME</li>
-          <li>SHOP</li>
           <li>ABOUT</li>
-          <li>VISIT</li>
+          <li>SHOP</li>
           <li>SUBSCRIPTIONS</li>
+          <li>VISIT</li>
           <li>CONTACT</li>
         </ul>
       </nav>
     </div>
   </section>
-
-  <!-- <section>
-    <div class="main-banner">
-      <div class="container">
-        <nav>
-          <img src="resources/images/logo.png" alt="lotus flower logo">
-          <div class= "company-name">
-            <h1>BATDORF & BRONSON</h1>
-            <span>Coffee Roasters</span>
-          </div>
-          <div class="hamburger">
-            <img src="resources/images/hamburger.jpg" alt="hamburger mobile display menu">
-          </div>
-          <ul>
-            <li>HOME</li>
-            <li>SHOP</li>
-            <li>ABOUT</li>
-            <li>VISIT</li>
-            <li>SUBSCRIPTIONS</li>
-            <li>CONTACT</li>
-          </ul>
-        </nav>
-        <div class="headline">
-          <h3>Ethically sourced and artisinally crafted.</h3>
-          <p>LEARN MORE</p>
-          <img src="resources/images/arrow.png" alt="scroll down arrow">
-        </div>
-      </div>
-    </div>
-  </section> -->
 
 <!-- Top Section -->
 
@@ -69,15 +39,15 @@
     <div class="top-left">
       <div class="top-left-content">
         <h1>THE COFFEE</h1>
-        <img src="resources/images/line_1.png" alt="orange line">
+        <img src="resources/images/home/line_1.png" alt="orange line">
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
       </div>
     </div>
     <div class="top-right">
       <div class="top-right-content">
-        <img src="resources/images/coffee_bag.png" alt="coffee bag">
+        <img src="resources/images/home/coffee_bag.png" alt="coffee bag">
         <p>See what's brewing at B&B</p>
-        <img src="resources/images/shop_button.png" alt="shop buttonn">
+        <img src="resources/images/home/shop_button.png" alt="shop buttonn">
       </div>
     </div>
   </section>
@@ -90,13 +60,13 @@
       <div class="bottom-right">
         <div class="bottom-right-content">
           <h1>THE CAFE</h1>
-          <img src="resources/images/line_2.png" alt="blue line">
+          <img src="resources/images/home/line_2.png" alt="blue line">
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
         </div>
       </div>
     </section>
     <div class="learn-more">
-      <img src="resources/images/learn_more.jpg" alt="learn more button">
+      <img src="resources/images/home/learn_more.jpg" alt="learn more button">
     </div>
 
 <!-- Footer  -->
@@ -111,18 +81,8 @@
           </ul>
         </div>
         <div class="logo">
-          <img src="resources/images/footer_logo.png" alt="">
+          <img src="resources/images/home/footer_logo.png" alt="">
         </div>
-        <!-- <div class="new-left-footer">
-          <ul>
-            <li>HOME</li>
-            <li>SHOP</li>
-            <li>ABOUT</li>
-            <li>VISIT</li>
-            <li>SUBSCRIPTIONS</li>
-            <li>CONTACT</li>
-          </ul>
-        </div> -->
         <div class="right-footer">
           <ul>
             <li>VISIT</li>
@@ -131,16 +91,6 @@
           </ul>
         </div>
       </div>
-      <!-- <div class="new-left-footer">
-        <ul>
-          <li>HOME</li>
-          <li>SHOP</li>
-          <li>ABOUT</li>
-          <li>VISIT</li>
-          <li>SUBSCRIPTIONS</li>
-          <li>CONTACT</li>
-        </ul>
-      </div> -->
     </footer>
 
   </body>
