--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
             <img src="resources/images/home/hamburger.jpg" alt="hamburger menu">
           </div> -->
           <ul>
-            <a href="index.html"><li>HOME</li></a>
-            <a href="#"><li>ABOUT</li></a>
+            <a href="index.html" target="_blank"><li>HOME</li></a>
+            <a href="about.html" target="_blank"><li>ABOUT</li></a>
             <a href="#"><li>SHOP</li></a>
             <a href="#"><li>SUBSCRIPTIONS</li></a>
             <a href="#"><li>VISIT</li></a>
