--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <img src="resources/images/home/hamburger.jpg" alt="hamburger menu">
         </div>
         <ul>
-          <li>HOME</li>
-          <li>ABOUT</li>
-          <li>SHOP</li>
-          <li>SUBSCRIPTIONS</li>
-          <li>VISIT</li>
-          <li>CONTACT</li>
+          <a href="index.html" target="_blank"><li>HOME</li></a>
+          <a href="about.html" target="_blank"><li>ABOUT</li></a>
+          <a href="#"><li>SHOP</li></a>
+          <a href="#"><li>SUBSCRIPTIONS</li></a>
+          <a href="#"><li>VISIT</li></a>
+          <a href="#"><li>CONTACT</li></a>
         </ul>
       </nav>
     </div>
