--- a/shop.html
+++ b/shop.html
@@ -56,17 +56,17 @@
           <div class="items">
             <div class="item">
               <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <p>Bohemian</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
               <img src="resources/images/shop/capitol.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <p>Capitol</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
               <img src="resources/images/shop/dancing_goats.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <p>Dancing Goats</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
           </div>
@@ -82,22 +82,22 @@
           <div class="items">
             <div class="item">
               <img src="resources/images/shop/ethiopia.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <p>Ethiopia</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/guatemala.jpg" alt="">
+              <p>Guatemala</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/kenya.jpg" alt="">
+              <p>Kenya</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/sumatra.jpg" alt="">
+              <p>Sumatra</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
           </div>
@@ -112,25 +112,25 @@
           </div>
           <div class="items">
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/dancing_goats_2.png" alt="">
+              <p>Dancing Goats</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/peru.png" alt="">
+              <p>Peru</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/whirling_dervish.png" alt="">
+              <p>Whirling Dervish</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
           </div>
         </div>
       </div>
 
-      <div class="products-background-gray">
+      <div class="products-background-white">
         <div class="products-container">
           <div class="title">
             <h1>Espresso</h1>
@@ -138,23 +138,23 @@
           </div>
           <div class="items">
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/dancing_goats.jpg" alt="">
+              <p>Dancing Goats</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
               <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <p>Bohemian</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/guatemala.jpg" alt="">
+              <p>Guatemala</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
             <div class="item">
-              <img src="resources/images/shop/bohemian.jpg" alt="">
-              <p>Bohemian Blend</p>
+              <img src="resources/images/shop/capitol.jpg" alt="">
+              <p>Capitol</p>
               <img src="resources/images/shop/add_cart.jpg" alt="">
             </div>
           </div>
