finished visit page.

--- a/shop.html
+++ b/shop.html
@@ -23,8 +23,8 @@
             <a href="index.html" target="_blank"><li>HOME</li></a>
             <a href="about.html" target="_blank"><li>ABOUT</li></a>
             <a href="shop.html" target="_blank"><li>SHOP</li></a>
-            <a href="#"><li>SUBSCRIPTIONS</li></a>
-            <a href="#"><li>VISIT</li></a>
+            <a href=""><li>SUBSCRIPTIONS</li></a>
+            <a href="visit.html" target="_blank"><li>VISIT</li></a>
             <a href="#"><li>CONTACT</li></a>
           </ul>
         </nav>
