--- a/visit.html
+++ b/visit.html
@@ -53,7 +53,7 @@
           </div>
           <img src="resources/images/locations/BB_Coffeehouse.jpg" alt="">
         </div>
-        <div class="info">
+        <div class="info-right">
           <div class = "address">
             <p>516 South Capitol Way</p>
             <p>Olympia, WA 98501</p>
@@ -64,9 +64,103 @@
           <p>Our flagship coffeehouse is located in the heart of downtown Olympia and has been serving the finest coffees, espresso drinks, teas and locally baked pastries since 1986. The coffeehouse features ample seating, inviting couches and a cozy fireplace.</p>
           </div>
         </div>
-
       </div>
     </section>
+
+    <section class="gray">
+      <div class="locations-container">
+        <div class="info-left">
+          <div class = "address">
+            <p>200 Market St. NE.</p>
+            <p>Olympia, WA 98501</p>
+            <p>(360) 753 - 4057</p>
+            <p>Wed - Sun: 9am to 4pm </p>
+          </div>
+          <div class="description">
+          <p>The Batdorf & Bronson Tasting Room is located in our roastery and offers a variety of coffees for our patrons to sample. Visitors may enjoy coffee from the major growing areas of Africa, Indonesia and Latin America.</p>
+          </div>
+        </div>
+        <div class="image">
+          <div class = "place">
+            <h2>Batdorf & Bronson Tasting Room</h2>
+            <span><img src="resources/images/locations/line_2.png" alt=""></span>
+          </div>
+          <img src="resources/images/locations/tasting_room.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="white">
+      <div class="locations-container">
+        <div class="image">
+          <div class = "place">
+            <h2>Batdorf & Bronson Coffee Bar</h2>
+            <span><img src="resources/images/locations/line_1.png" alt=""></span>
+          </div>
+          <img src="resources/images/locations/coffee_bar.jpg" alt="">
+        </div>
+        <div class="info-right">
+          <div class = "address">
+            <p>4219 6th Avenue SE.  </p>
+            <p>Lacey, WA 98503</p>
+            <p>(360) 359 - 4622</p>
+            <p>Mon - Fri: 7am to 5pm</p>
+            <p>Sat - Sun: 8am - 3pm</p>
+          </div>
+          <div class="description">
+          <p>The Batdorf and Bronson Coffee Bar is conveniently located across the street from the Lacey Transit Center. Stop by and enjoy a fresh cup of exceptional coffee or lunch. This location offers wonderful paninis and salads and a delicious selection of baked goodies from Sacchariferous Bakery and Left Bank Pastries.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gray">
+      <div class="locations-container">
+        <div class="info-left">
+          <div class = "address">
+            <p>516 4th Avenue  W. </p>
+            <p>Olympia, WA 98501</p>
+            <p>(360) 352 - 4901</p>
+            <p>Mon - Fri: 6am to 6pm</p>
+            <p>Sat - Sun: 7am - 6pm</p>
+          </div>
+          <div class="description">
+          <p>The Batdorf & Bronson Espresso Bar is located across the street from the Olympia Farmers Market and is modeled after the busy espresso bars of Italy. Stand at the marble counter and watch our highly trained baristas craft drinks of unsurpassed quality.</p>
+          </div>
+        </div>
+        <div class="image">
+          <div class = "place">
+            <h2>Batdorf & Bronson Espresso Bar</h2>
+            <span><img src="resources/images/locations/line_2.png" alt=""></span>
+          </div>
+          <img src="resources/images/locations/espresso_bar.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+<!-- Footer  -->
+
+    <footer>
+      <div class="footer-content">
+        <div class="left-footer">
+          <ul>
+            <li>HOME</li>
+            <li>SHOP</li>
+            <li>ABOUT</li>
+          </ul>
+        </div>
+        <div class="logo">
+          <img src="resources/images/home/footer_logo.png" alt="">
+        </div>
+        <div class="right-footer">
+          <ul>
+            <li>VISIT</li>
+            <li>SUBSCRIPTIONS</li>
+            <li>CONTACT</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
 
   </body>
