--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <a href="about.html" target="_blank"><li>ABOUT</li></a>
             <a href="shop.html" target="_blank"><li>SHOP</li></a>
             <a href="#"><li>SUBSCRIPTIONS</li></a>
-            <a href="#"><li>VISIT</li></a>
+            <a href="visit.html" target="_blank"><li>VISIT</li></a>
             <a href="#"><li>CONTACT</li></a>
           </ul>
         </nav>
