--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <ul>
           <a href="index.html" target="_blank"><li>HOME</li></a>
           <a href="about.html" target="_blank"><li>ABOUT</li></a>
-          <a href="#"><li>SHOP</li></a>
-          <a href="#"><li>SUBSCRIPTIONS</li></a>
-          <a href="#"><li>VISIT</li></a>
+          <a href="shop.html" target="_blank"><li>SHOP</li></a>
+          <a href=""><li>SUBSCRIPTIONS</li></a>
+          <a href="visit.html" target="_blank"><li>VISIT</li></a>
           <a href="#"><li>CONTACT</li></a>
         </ul>
       </nav>
