--- a/visit.html
+++ b/visit.html
@@ -24,8 +24,8 @@
             <a href="index.html" target="_blank"><li>HOME</li></a>
             <a href="about.html" target="_blank"><li>ABOUT</li></a>
             <a href="shop.html" target="_blank"><li>SHOP</li></a>
-            <a href="visit.html" target="_blank"><li>SUBSCRIPTIONS</li></a>
-            <a href="#"><li>VISIT</li></a>
+            <a href="#" target="_blank"><li>SUBSCRIPTIONS</li></a>
+            <a href="visit.html"><li>VISIT</li></a>
             <a href="#"><li>CONTACT</li></a>
           </ul>
         </nav>
